feat(tests): add PHPUnit tests for models refactor(controllers, models): refactor code for better testability, implement Dependency Injection

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,13 @@
     "autoload": {
         "psr-4": {
             "Api\\": "api/"
-        }
+        },
+        "classmap": [
+            "api/",
+            "assets/"
+        ]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "11"
     }
 }
